# cuda_programming

sparseDeepNeuralNetwork/: 1.md  CMakeLists.txt  run.sh
sparseDeepNeuralNetwork/matlab/: inferenceReLUvec.m  runSparseDNNchallenge.m
sparseDeepNeuralNetwork/src/: sdnn.cu  sdnn_cusparse.cu  sdnn_cusparse_nobuffer.cu  sdnn_filter.cu  sdnn_mkl.cpp  sdnn_stream.cu
sparseDeepNeuralNetwork/src/include/: common.cuh  graph.hpp  helper.cuh  indexing_defs.h  intrinsics.cuh  matrix_io.cuh  mm.cuh  ref.cuh  ref_cusparse.cuh  ref_mkl.hpp  safe_call_defs.h  sparse_conversion.cuh  timer.cuh
sparseDeepNeuralNetwork/src/old/: sdnn.old.cu  sdnn_blas.cu
